Fix live edit caret color so it is visible

--- a/packages/patternfly-4/react-docs/src/components/componentDocs/live-edit.scss
+++ b/packages/patternfly-4/react-docs/src/components/componentDocs/live-edit.scss
@@ -8,6 +8,7 @@
   border-right: none;
   border-bottom: none;
   border-left: none;
+  caret-color: white;
 }
 
 .toolbar {
